# meeting-overlay-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements-app.txt  requirements-dev.txt  requirements-diarization-worker.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
client/: README.md
client/overlay/src-tauri/: Cargo.toml  tauri.conf.json
client/overlay/src-tauri/src/: main.rs
deploy/: README.md
docs/: GITHUB_PLAYBOOK.md  README.md  STYLE_GUIDE.md  ascii.md  개발_진행_문제_해결_기록.md
frontend/: package-lock.json  package.json
legacy/: README.md
scripts/: README.md  audio-e2e.ps1  benchmark-live-questions.ps1  build-ksponspeech-eval-manifest.ps1  create-ollama-profiles.ps1  dev-client.ps1  dev-infra.ps1  dev-live-question-worker.ps1  dev-note-correction-worker.ps1  dev-post-processing-worker.ps1  dev-postgres.ps1  dev-redis.ps1  dev-report-worker.ps1  dev-server.ps1  dev-stack.ps1  live-audio.ps1  prepare-ksponspeech.ps1  run-ksponspeech-final-note-matrix.ps1  run-live-stt-candidate-batch.ps1  run-note-stt-candidate-matrix.ps1  send-text.ps1  server-admin.ps1
server/: README.md
shared/: README.md
stitch_UI/: overlay_quick_desk_draft.html  overlay_quick_desk_draft.json  overlay_quick_desk_prompt.txt  overlay_quick_desk_variant_b_draft.html  overlay_quick_desk_variant_b_draft.json  overlay_quick_desk_variant_b_prompt.txt  overlay_quick_desk_variant_c_draft.html  overlay_quick_desk_variant_c_draft.json  overlay_quick_desk_variant_c_prompt.txt  overlay_quick_desk_variant_d_prompt.txt  (+3 more)
tests/: conftest.py  (+69 more)
(+1516 files in other folders)
