[project]
name = "meeting-overlay-assistant"
version = "0.1.0"
description = "로컬 AI 기반 회의 오버레이 및 회의 후 리포트 보조 시스템"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "websockets>=14.0.0,<15.0.0",
    "numpy>=1.26.0,<2.0.0",
    "transformers>=4.45.0,<6.0.0",
    "huggingface_hub>=0.30.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sounddevice>=0.5.0,<1.0.0",
    "soundcard>=0.4.3,<1.0.0",
    "faster-whisper>=1.1.0,<2.0.0",
    "sherpa-onnx>=1.12.10,<2.0.0",
    "psutil>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
