[package]
name = "meeting_overlay_shell"
version = "0.1.0"
description = "회의 오버레이 클라이언트"
authors = ["caps"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"

[profile.dev]
incremental = false

[profile.dev.build-override]
incremental = false
